--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,20 @@ body {
   padding: 10px;
   height: 100%;
 }
-#Main #Board {
+#Main #Commands {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  padding: 10px;
+}
+#Main #Commands #Board {
   padding: 10px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  box-shadow: 1px 1px 10px black;
+  box-shadow: 1px 1px 5px black;
 }
-#Main #Board aside {
+#Main #Commands #Board aside {
   height: 70px;
   width: 70px;
   border: 1px solid black;
@@ -25,9 +32,26 @@ body {
   justify-content: center;
   align-items: center;
 }
-#Main #Board aside img {
+#Main #Commands #Board aside img {
   height: 100%;
   width: 100%;
+}
+#Main #Commands article {
+  border: 1px solid black;
+  width: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#Main #Commands article button {
+  height: -moz-fit-content;
+  height: fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 5px;
+  border-radius: 20px;
+  border: 2px solid black;
 }
 #Main #Results {
   border: 1px solid black;
